[package]
name = "abi-gen"
version = "1.0.0-rc2"
authors = ["vita-dounai <lichenxi.webank@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies.contract]
path = "../../"
package = "asset"
default-features = false
features = ["liquid-abi-gen"]

[dependencies.liquid_lang]
git = "https://github.com/WeBankBlockchain/liquid"
branch = "dev"
package = "liquid_lang"
default-features = false
features = ["contract-abi-gen"]

[dependencies]
serde = "1.0"
serde_json = "1.0"